# autoscoper-v2

./: CMakeLists.txt
autoscoper/: CMakeLists.txt
autoscoper/src/core/: History.hpp
autoscoper/src/ui/: AutoscoperMainWindow.cpp  AutoscoperMainWindow.h  CameraViewWidget.cpp  CameraViewWidget.h  FilterTreeWidget.cpp  GLTimeline.cpp  GLView.cpp  GLView.h  ImportExportTrackingOptionsDialog.cpp  ModelViewTreeWidgetItem.cpp  TimelineDockWidget.cpp  TrackingExtendedOptionsDialog.cpp  TrackingExtendedOptionsDialog.h  TrackingOptionsDialog.cpp
autoscoper/src/ui/ui-files/: AutoscoperMainWindow.ui  TrackingExtendedOptionsDialog.ui
cmake/: FindCMinpack.cmake
libautoscoper/: CMakeLists.txt
libautoscoper/src/: Camera.cpp  Camera.hpp  CoordFrame.cpp  CoordFrame.hpp  DownhillSimplex.hpp  KeyCurve.hpp  Tracker - Copy.cpp  Tracker.cpp  Tracker.hpp  Trial.cpp  Trial.hpp  View.cpp  View.hpp  VolumeDescription.cpp  VolumeDescription.hpp
libautoscoper/src/gpu/cuda/: Merger_kernels.cu
libautoscoper/src/gpu/opencl/: CMakeLists.txt  Ncc.cpp  OpenCL.cpp  RadRenderer.cpp  RadRenderer.hpp  RayCaster.cpp  RayCaster.hpp
libautoscoper/src/gpu/opencl/kernel/: CMakeLists.txt  RadRenderer.cl  RayCaster.cl
